--- a/templates/build-template.yml
+++ b/templates/build-template.yml
@@ -42,6 +42,8 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
       - name: Build
+        env:
+          BASE_PATH: ${{ secrets.BASE_PATH }}
         run: pnpm build
       - name: Upload Pages Artifact
         uses: actions/upload-pages-artifact@v1
