--- a/templates/ping-template.yml
+++ b/templates/ping-template.yml
@@ -38,3 +38,8 @@ jobs:
         run: pnpm install --frozen-lockfile
       - name: Start Pinging
         run: pnpm run ping -- $(id)
+      - name: Update ping records
+        run: |
+          git add data
+          git diff-index --quiet HEAD || git commit --author "Shizu <>" -m "Update ping records"
+          git push
