build: require node.js 21+
This is for the build-in `fetch` function in node, so the ping script doesn't need to install any external libraries to run. Reducing the pipeline run time.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
 	"version": "0.1.2",
 	"type": "module",
 	"private": true,
+	"engines": {
+		"node": ">=21.0.0"
+	},
 	"scripts": {
 		"dev": "tsx ./src/lib/helpers/init.ts & vite dev --port 3000",
 		"build": "vite build",
