--- a/templates/build-template.yml
+++ b/templates/build-template.yml
@@ -1,4 +1,5 @@
 name: SSG Build & Deploy
+name: SSG Build & Deploy
 
 on:
   schedule:
@@ -22,7 +23,7 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 21
       - name: Install pnpm
         uses: pnpm/action-setup@v2
         with:
@@ -50,13 +51,13 @@ jobs:
         with:
           path: 'build'
 
-deploy:
-  needs: build
-  runs-on: ubuntu-latest
-  environment:
-    name: github-pages
-    url: ${{ steps.deployment.outputs.page_url }}
-  steps:
-    - name: Deploy to GitHub Pages
-      id: deployment
-      uses: actions/deploy-pages@v1
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
